<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp">

    <!-- ImageView per il logo -->
    <ImageView
        android:id="@+id/imageViewLogin"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/image_login"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/logo" />

    <ImageView
        android:id="@+id/indietroImageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/icon_freccia"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="25dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true" />

    <!-- TextView per le informazioni -->
    <TextView
        android:id="@+id/textViewInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/inserisci_email_e_password"
        android:textAlignment="center"
        android:textColor="#7F7F82"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/imageViewLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewInfo"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewInfo" />

    <!-- Campo di input Email -->
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/emailLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/example_gmail_com"
            android:drawablePadding="10dp"
            android:inputType="textEmailAddress"
            android:background="@null"
            android:paddingBottom="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/emailToggle"
            app:layout_constraintHorizontal_chainStyle="packed" />

        <ImageButton
            android:id="@+id/emailToggle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="false"
            android:contentDescription="@string/toggle_password_visibility"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:onClick="togglePasswordVisibility"
            android:padding="15dp"
            android:src="@drawable/icon_email"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toTopOf="@id/editTextEmail"
            app:layout_constraintBottom_toBottomOf="@id/editTextEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/editTextEmail" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/emailLayout"
        android:background="#CCCCCC"
        app:layout_constraintTop_toBottomOf="@id/emailLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- TextView per Password -->
    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/black"
        android:layout_below="@id/emailLayout"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/emailLayout"
        app:layout_constraintStart_toStartOf="parent"/>


    <!-- Campo di input Password -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordLabel"
        app:layout_constraintTop_toBottomOf="@id/passwordLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/passwordInsivible"
            android:drawablePadding="10dp"
            android:inputType="textPassword"
            android:background="@null"
            android:paddingBottom="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/passwordToggle" />

        <ImageButton
            android:id="@+id/passwordToggle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:onClick="togglePasswordVisibility"
            android:contentDescription="@string/toggle_password_visibility"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:padding="15dp"
            android:src="@drawable/icon_hide_password"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toTopOf="@id/editTextPassword"
            app:layout_constraintBottom_toBottomOf="@id/editTextPassword"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/passwordLayout"
        android:background="#CCCCCC"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- TextView "Password dimenticata?" -->
    <TextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/password_dimenticata"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout"
        app:layout_constraintBottom_toBottomOf="@id/checkBoxRicordami"
        android:layout_marginTop="18dp"
        android:layout_marginStart="8dp"/>

    <Switch
        android:id="@+id/checkBoxRicordami"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ricordami"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout"
        app:layout_constraintBottom_toBottomOf="@id/textViewForgotPassword"
        android:layout_marginStart="8dp"
        android:layout_marginTop="18dp"
        android:thumbTint="@animator/thumb"
        android:trackTint="@animator/track" />

    <!-- Bottoni "Accedi" e "Registrati" -->
    <TextView
        android:id="@+id/buttonAccedi"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        android:background="@drawable/button_celeste"
        android:clickable="true"
        android:focusable="true"
        android:padding="15dp"
        android:text="@string/accedi"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textColor="#FFFFFF"
        android:paddingVertical="12dp"
        app:layout_constraintTop_toBottomOf="@id/textViewForgotPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>
