<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp">

    <ImageView
        android:id="@+id/Slder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/image_slidertris_3"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/indietroImageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/icon_freccia"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toBottomOf="@id/Slder"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="25dp" />

    <TextView
        android:id="@+id/tvRegistration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Registrazione"
        android:textColor="#000000"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/indietroImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp" />

    <!-- Intestazione -->
    <TextView
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tvRegistration"
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Creiamo il tuo account"
        android:textSize="25sp"
        android:textColor="#000000"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvRegistration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <!-- Sottotitolo -->
    <TextView
        android:layout_centerHorizontal="true"
        android:id="@+id/tvSubHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvHeader"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="Ci siamo quasi"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSubHeader"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSubHeader" />

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/emailLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/example_gmail_com"
            android:drawablePadding="10dp"
            android:inputType="textEmailAddress"
            android:background="@null"
            android:paddingBottom="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/emailToggle"
            app:layout_constraintHorizontal_chainStyle="packed" />

        <ImageButton
            android:id="@+id/emailToggle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="false"
            android:contentDescription="@string/toggle_password_visibility"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:onClick="togglePasswordVisibility"
            android:padding="15dp"
            android:src="@drawable/icon_basiccheck"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toTopOf="@id/editTextEmail"
            app:layout_constraintBottom_toBottomOf="@id/editTextEmail"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/emailLayout"
        android:background="#CCCCCC"
        app:layout_constraintTop_toBottomOf="@id/emailLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/emailLayout"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordLabel"
        app:layout_constraintTop_toBottomOf="@id/passwordLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Inserisci nuova password"
            android:drawablePadding="10dp"
            android:inputType="textPassword"
            android:background="@null"
            android:paddingBottom="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/passwordToggle1" />

        <ImageButton
            android:id="@+id/passwordToggle1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/toggle_password_visibility"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:onClick="togglePasswordVisibility"
            android:padding="15dp"
            android:src="@drawable/icon_hide_password"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            app:layout_constraintBottom_toBottomOf="@id/editTextPassword"
            app:layout_constraintEnd_toStartOf="@id/passwordToggle"
            app:layout_constraintTop_toTopOf="@id/editTextPassword" />

        <ImageButton
            android:id="@+id/passwordToggle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="false"
            android:contentDescription="@string/toggle_password_visibility"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:padding="15dp"
            android:src="@drawable/icon_basiccheck"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toTopOf="@id/editTextPassword"
            app:layout_constraintBottom_toBottomOf="@id/editTextPassword"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/passwordLayout"
        android:background="#CCCCCC"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Intestazione per il link social 1 -->
    <TextView
        android:id="@+id/tvSocialLink2Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Conferma Password"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/passwordLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordLabel"
        app:layout_constraintTop_toBottomOf="@id/tvSocialLink2Label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Conferma la tua nuova password"
            android:drawablePadding="10dp"
            android:inputType="textPassword"
            android:background="@null"
            android:paddingBottom="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/passwordToggle2" />

        <ImageButton
            android:id="@+id/passwordToggle2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/toggle_password_visibility"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:onClick="togglePasswordVisibility2"
            android:padding="15dp"
            android:src="@drawable/icon_hide_password"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            app:layout_constraintBottom_toBottomOf="@id/editTextPassword2"
            app:layout_constraintEnd_toStartOf="@id/passwordToggle3"
            app:layout_constraintTop_toTopOf="@id/editTextPassword2" />

        <ImageButton
            android:id="@+id/passwordToggle3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="false"
            android:contentDescription="@string/toggle_password_visibility"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:padding="15dp"
            android:src="@drawable/icon_basiccheck"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toTopOf="@id/editTextPassword2"
            app:layout_constraintBottom_toBottomOf="@id/editTextPassword2"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#CCCCCC"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Bottone per aggiungere altri social -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/passwordLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <ImageButton
            android:id="@+id/checkTermini"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="5dp"
            android:src="@drawable/icon_basiccheck"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/accettoTermini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Accetto i "
            app:layout_constraintStart_toEndOf="@id/checkTermini"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/visualizzaTermini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="termini e condizioni"
            android:textStyle="bold"
            android:textColor="@color/lightCeleste"
            android:textSize="16sp"
            android:clickable="true"
            app:layout_constraintStart_toEndOf="@id/accettoTermini"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textInfoError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="14sp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/registratiButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="Registrati"
        android:textSize="22sp"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_celeste"
        android:padding="15dp"
        android:elevation="2dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
